--- a/.style.css
+++ b/.style.css
@@ -1,4 +1,4 @@
-﻿* {
+* {
 	padding:0;
 	margin:0;
 }
@@ -29,9 +29,9 @@ h2 {
 
 #nav {
     line-height:30px;
-    background-color:black;
-    height:30px;
-    width:500px;
+    background-color:#white;
+    height:90px;
+    width:800px;
     float:left;
     padding:5px;	      
 }
